--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,5 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__info/footer__info.css);
 @import url(../blocks/footer/__button/footer__button.css);
+
+@import url(../blocks/rotation/rotation.css);
