--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -5,3 +5,10 @@
   flex-direction: row;
   gap: 20px;
 }
+
+@media screen and (max-width: 650px) {
+  .footer__menu {
+    flex-direction: column;
+    gap: 5px;
+  }
+}
