--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,3 +11,10 @@
 .footer__link:hover {
   opacity: .6;
 }
+
+@media screen and (max-width: 650px) {
+  .footer__link {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
