--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,10 @@
   align-items: center;
   margin: 183px auto 131px;
 }
+
+@media screen and (max-width: 650px) {
+  .footer {
+    margin: 60px 20px;
+    align-items: flex-start;
+  }
+}
