--- a/blocks/intro/__description/intro__description.css
+++ b/blocks/intro/__description/intro__description.css
@@ -7,3 +7,12 @@
   text-align: center;
   z-index: 1;
 }
+
+@media screen and (max-width: 650px) {
+  .intro__description {
+    max-width: 150px;
+    font-size: 12px;
+    line-height: 18px;
+    margin: 0 auto 20px;
+  }
+}
