--- a/blocks/rocket/__first-section/rocket__first-section.css
+++ b/blocks/rocket/__first-section/rocket__first-section.css
@@ -3,3 +3,21 @@
   flex-direction: column;
   margin: 492px 0 0 149px;
 }
+
+@media screen and (max-width: 1024px) {
+  .rocket__first-section {
+    margin: 392px 0 0 60px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .rocket__first-section {
+    margin: 350px 0 0 40px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .rocket__first-section {
+    margin: 60px 20px 0;
+  }
+}
