--- a/blocks/rocket/__image/rocket__image.css
+++ b/blocks/rocket/__image/rocket__image.css
@@ -6,3 +6,36 @@
   margin: -66px 0 0 40px;
   z-index: 1;
 }
+
+@media screen and (max-width: 1280px) {
+  .rocket__image {
+    width: calc(644px - 300px);
+    height: calc(1718px - 300px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .rocket__image {
+    width: calc(644px - 420px);
+    height: calc(1718px - 420px);
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .rocket__image {
+    width: calc(644px - 420px);
+    height: calc(1718px - 420px);
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .rocket__image {
+    width: calc(644px - 420px);
+    height: calc(1718px - 1220px);
+    margin: 0 auto;
+    object-fit: contain;
+  }
+}
