--- a/blocks/rocket/__param/rocket__param.css
+++ b/blocks/rocket/__param/rocket__param.css
@@ -1,3 +1,16 @@
 .rocket__param {
   margin-bottom: 11px;
 }
+
+@media screen and (max-width: 1280px) {
+  .rocket__param {
+    min-width: 158px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .rocket__param {
+    min-width: 114px;
+    margin-bottom: 0;
+  }
+}
