--- a/blocks/rocket/__params/rocket__params.css
+++ b/blocks/rocket/__params/rocket__params.css
@@ -5,3 +5,10 @@
   list-style: none;
   padding: 0;
 }
+
+@media screen and (max-width: 650px) {
+  .rocket__params {
+    font-size: 12px;
+    line-height: 29px;
+  }
+}
