--- a/blocks/rocket/__value/rocket__value.css
+++ b/blocks/rocket/__value/rocket__value.css
@@ -1,3 +1,17 @@
 .rocket__value {
   margin-bottom: 11px;
 }
+
+@media screen and (max-width: 1280px) {
+  .rocket__value {
+    min-width: 215px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .rocket__value {
+    min-width: 155px;
+    margin-bottom: 0;
+  }
+}
+
