--- a/blocks/rocket/rocket.css
+++ b/blocks/rocket/rocket.css
@@ -2,3 +2,10 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 650px) {
+  .rocket {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
